[package]
name = "ping-agent"
version = "0.2.0"
authors = ["cal.huang <huanghaoyuanhhy@gmail.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
socket2 = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
bytes = "1"
chrono = "0.4"
anyhow = "1"
tonic = "0.4"
prost = "0.7"
tracing = "0.1"
tracing-futures = "0.2"
tracing-attributes = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.4"
