[package]
name = "ping-agent"
version = "0.3.0"
authors = ["cal.huang <huanghaoyuanhhy@gmail.com>"]
edition = "2021"
license = "MIT"
build = "build.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
socket2 = "0.5"
futures = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
bytes = "1"
anyhow = "1"
tonic = "0.8"
prost = "0.11"
tracing = "0.1"
tracing-futures = "0.2"
tracing-attributes = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
toml = "0.7"
serde = { version = "1", features = ["derive"] }
exitcode = "1"

[build-dependencies]
tonic-build = "0.11"
